--- a/FL12_HW1/homework/index.html
+++ b/FL12_HW1/homework/index.html
@@ -12,8 +12,7 @@
     <div id="main">
       <div id="container">
         <div id="content" role="main">
-          <!-- TODO: Content goes here -->
-		  <a href="#"><img src="logo.png" alt="logo"></a>
+		  <img src="logo.png" alt="logo">
 		  
 		  <h1>HTML Elements</h1>
 		  
@@ -41,7 +40,7 @@ Nullam dignissim convallis est. Quisque aliquam.
 <em>This is emphasized.</em>
 Donec faucibus. Nunc iaculis suscipit dui. 
 4<sup>4</sup> = 256.
-Water is H<sub>3</sub>PO<sub>4</sub>.
+Phosphoric acid is H<sub>3</sub>PO<sub>4</sub>.
 Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl.
 <cite>Time Magazine</cite>
 (That’s a citation).
